tests/reference/asr-derived_type_02-3e6510f.stderr
semantic error: Passed object dummy argument does not match function argument
 --> tests/errors/derived_type_02.f90:7:9
  |
7 |         procedure(testing_interface), deferred  :: testing
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
